--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,43 +1,34 @@
 <footer th:fragment="footer" class="footer bg-black text-white pt-5 pb-3">
     <div class="container">
         <div class="row gy-4 justify-content-between">
-
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="flex items-center mb-3">
                     <img th:src="@{/asset/logo3.png}" alt="Logo" style="width: 150px;" class="me-3">
                 </div>
-
                 <p class="text-secondary">Temukan kisah favoritmu di DuniaCerita. 
                  Dari romansa yang menggetarkan hati hingga petualangan yang menegangkan, setiap halaman membawa dunia baru untuk dijelajahi.</p>
             </div>
-
-            
-
-            <div class="footer-section links">
-                <h5>Kelompok 5</h5>
-              <ul>
-                <li><a>Eka Verarina | 24111814004 </a></li>
-                <li><a>Prima Miftakhul Rahma | 24111814005</a></li>
-                <li><a>Jenar Aditiya Bagaskara | 24111814093</a></li>
-                <li><a>Muhammad Dwi Saputra | 24111814080</a></li>
-                <li><a>Farid Ade Novian |  24111814140</a></li>
-                <li><a>Muhammad Dzacky Maulana Yahya |  24111814127</a></li>
-                <li><a>Renza Alvianino |  24111814011</a></li>
-             </ul>
+            <div class="footer-section links text-end">
+                <h5 class="text-end">Kelompok 5</h5>
+                <ul class="text-end">
+                    <li><a>Eka Verarina | 24111814004 </a></li>
+                    <li><a>Prima Miftakhul Rahma | 24111814005</a></li>
+                    <li><a>Jenar Aditiya Bagaskara | 24111814093</a></li>
+                    <li><a>Muhammad Dwi Saputra | 24111814080</a></li>
+                    <li><a>Farid Ade Novian |  24111814140</a></li>
+                    <li><a>Muhammad Dzacky Maulana Yahya |  24111814127</a></li>
+                    <li><a>Renza Alvianino |  24111814011</a></li>
+                </ul>
             </div>
-
-
             <div class="col-6 col-md-3 col-lg-2">
-                <h6 class="fw-bold text-light">Legal</h6>
-                <ul class="list-unstyled text-secondary">
+                <h6 class="fw-bold text-light text-end">Legal</h6>
+                <ul class="list-unstyled text-secondary text-end">
                     <li><a href="#" class="text-secondary text-decoration-none">Terms of Service</a></li>
                     <li><a href="#" class="text-secondary text-decoration-none">Privacy Policy</a></li>
                 </ul>
             </div>
         </div>
-
         <hr class="my-4 text-secondary">
-
         <div class="d-flex flex-column flex-md-row justify-content-between align-items-center">
             <p class="mb-2 mb-md-0 text-secondary">© 2025 NOVELKU. All rights reserved.</p>
             <div class="d-flex gap-3">
