--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -6,6 +6,10 @@ d<!DOCTYPE html>
     <title>Login Novelku</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
+
+ <!-- Import Google Fonts: Poppins -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+
     <style>
         body {
             display: flex;
@@ -13,8 +17,9 @@ d<!DOCTYPE html>
             align-items: center;
             height: 100vh;
             margin: 0;
+            padding: 0;
             background-color: #f4f4f4;
-            font-family: 'Fredoka One', sans-serif;
+            font-family: 'poppins', sans-serif;
         }
         .container {
             text-align: center;
@@ -28,6 +33,11 @@ d<!DOCTYPE html>
             font-weight: bold;
             margin-bottom: 30px;
         }
+
+        .title span {
+            font-weight: 700; /* Bold untuk "KU" */
+        }
+
         .icon {
             width: 80px; 
             height: auto;
@@ -61,7 +71,7 @@ d<!DOCTYPE html>
 <body>
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="neo-card p-5" style="width: 100%; max-width: 400px;">
-            <h2 class="title">NOVELKU</h2>
+            <h2 class="title">NOVEL<span>KU</span></h2>
             <form th:action="@{/auth/login}" method="post">
                 <div class="mb-3">
                     <label for="username" class="form-label">Username</label>
