--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -27,6 +27,12 @@
             box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1);
         }
 
+        .icon {
+            width: 100px;
+            height: auto;
+            margin-bottom: 20px;
+        }
+
         .title {
             font-size: 3rem;
             margin-bottom: 30px;
@@ -37,17 +43,11 @@
             font-weight: 700;
         }
 
-        .icon {
-            width: 80px; 
-            height: auto;
-            margin-bottom: 30px;
-        }
-
         .button {
             display: block;
             width: 100%;
-            padding: 20px; 
-            margin: 15px 0; 
+            padding: 20px;
+            margin: 15px 0;
             border: none;
             border-radius: 5px;
             font-size: 1.2rem;
@@ -76,7 +76,7 @@
         }
 
         ::placeholder {
-            color: #999; /* abu-abu */
+            color: #999;
             opacity: 1;
         }
 
@@ -89,7 +89,13 @@
 <body>
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="neo-card p-5" style="width: 100%; max-width: 400px;">
+            <!-- Ikon buku -->
+            <img src="book.png" alt="Book Icon" class="icon">
+            
+            <!-- Judul -->
             <h2 class="title">NOVEL<span class="bold">KU</span></h2>
+
+            <!-- Form -->
             <form th:action="@{/auth/login}" method="post">
                 <div class="mb-3">
                     <input id="username" name="username" type="text" placeholder="Username" class="form-control border border-dark neo-card">
