--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -90,7 +90,7 @@
     <div class="container d-flex justify-content-center align-items-center vh-100">
         <div class="neo-card p-5" style="width: 100%; max-width: 400px;">
             <!-- Ikon buku -->
-            <img src="book.png" alt="Book Icon" class="icon">
+            <img th:src="@{/asset/book.png}" alt="Logo" class="default-logo" style="width: 100px;">
             
             <!-- Judul -->
             <h2 class="title">NOVEL<span class="bold">KU</span></h2>
