--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -23,7 +23,7 @@
         </ul>
 
         
-        <a class="btn btn-outline-light border-3 btn-brutal-blue w-100" href="#">
+        <a class="btn btn-outline-dark border-3 btn-brutal-blue w-100" href="#">
             <i class="fa-solid fa-cart-shopping me-2"></i> Cart
         </a>
 
