--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -3,14 +3,14 @@
         <div class="row gy-4 justify-content-between">
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="flex items-center mb-3">
-                    <img th:src="@{/asset/logo3.png}" alt="Logo" style="width: 150px;" class="me-3">
+                    <img th:src="@{/asset/book2.png}" alt="Logo" class="me-3" width="150px">
                 </div>
                 <p class="text-secondary">Temukan kisah favoritmu di DuniaCerita. 
                  Dari romansa yang menggetarkan hati hingga petualangan yang menegangkan, setiap halaman membawa dunia baru untuk dijelajahi.</p>
             </div>
-            <div class="footer-section links text-end">
-                <h6 class="text-end">Kelompok 5</h6>
-                <ul class="text-end">
+            <div class="col-6 col-md-3 col-lg-6">
+                <h6 class="text-light">Kelompok 5</h6>
+                <ul class="text-secondary">
                     <li><a>Eka Verarina | 24111814004 </a></li>
                     <li><a>Prima Miftakhul Rahma | 24111814005</a></li>
                     <li><a>Jenar Aditiya Bagaskara | 24111814093</a></li>
