--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,12 +1,12 @@
 <header th:fragment="navbar">
 
-<nav class="navbar bg-light border-end border-dark border-4 shadow-brutal position-fixed top-0 start-0 h-100 p-3" style="width: 250px; z-index: 1030;">
+<nav class="navbar bg-light border-end border-dark border-4 position-fixed top-0 start-0 h-100 p-3" style="width: 250px; z-index: 1030;">
     <div class="d-flex flex-column align-items-start gap-4 h-100">
 
         
         <a class="navbar-brand" href="#">
             <div class="logo-wrapper">
-                <img th:src="@{/asset/logo.png}" alt="Logo" class="default-logo" style="width: 100px;">
+                <img th:src="@{/asset/logo.gif}" alt="Logo" class="default-logo" style="width: 100px;">
                 <img th:src="@{/asset/logo2.png}" alt="Logo Hover" class="hover-logo d-none">
             </div>
         </a>
